// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component button-bar styling renders 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ kWkDUg"
    data-orientation="horizontal"
    data-rac=""
  >
    <div
      aria-label="Items"
      aria-orientation="horizontal"
      class="react-aria-TabList"
      data-orientation="horizontal"
      data-rac=""
      id="react-aria-13"
      role="tablist"
    >
      <div
        aria-controls="react-aria-13-tabpanel-one"
        aria-selected="true"
        class="react-aria-Tab"
        data-key="one"
        data-rac=""
        data-selected="true"
        id="react-aria-13-tab-one"
        role="tab"
        tabindex="0"
      >
        First Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-key="two"
        data-rac=""
        id="react-aria-13-tab-two"
        role="tab"
        tabindex="-1"
      >
        Second Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-key="three"
        data-rac=""
        id="react-aria-13-tab-three"
        role="tab"
        tabindex="-1"
      >
        Last Item
      </div>
    </div>
    <div
      aria-labelledby="react-aria-13-tab-one"
      class="react-aria-TabPanel"
      data-rac=""
      id="react-aria-13-tabpanel-one"
      role="tabpanel"
      tabindex="0"
    >
      First Content Panel
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs component button-bar styling renders large size 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ kTnZrf"
    data-orientation="horizontal"
    data-rac=""
  >
    <div
      aria-label="Items"
      aria-orientation="horizontal"
      class="react-aria-TabList"
      data-orientation="horizontal"
      data-rac=""
      id="react-aria-21"
      role="tablist"
    >
      <div
        aria-controls="react-aria-21-tabpanel-one"
        aria-selected="true"
        class="react-aria-Tab"
        data-key="one"
        data-rac=""
        data-selected="true"
        id="react-aria-21-tab-one"
        role="tab"
        tabindex="0"
      >
        First Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-key="two"
        data-rac=""
        id="react-aria-21-tab-two"
        role="tab"
        tabindex="-1"
      >
        Second Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-key="three"
        data-rac=""
        id="react-aria-21-tab-three"
        role="tab"
        tabindex="-1"
      >
        Last Item
      </div>
    </div>
    <div
      aria-labelledby="react-aria-21-tab-one"
      class="react-aria-TabPanel"
      data-rac=""
      id="react-aria-21-tabpanel-one"
      role="tabpanel"
      tabindex="0"
    >
      First Content Panel
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs component button-bar styling renders small size 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ kFnuyo"
    data-orientation="horizontal"
    data-rac=""
  >
    <div
      aria-label="Items"
      aria-orientation="horizontal"
      class="react-aria-TabList"
      data-orientation="horizontal"
      data-rac=""
      id="react-aria-17"
      role="tablist"
    >
      <div
        aria-controls="react-aria-17-tabpanel-one"
        aria-selected="true"
        class="react-aria-Tab"
        data-key="one"
        data-rac=""
        data-selected="true"
        id="react-aria-17-tab-one"
        role="tab"
        tabindex="0"
      >
        First Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-key="two"
        data-rac=""
        id="react-aria-17-tab-two"
        role="tab"
        tabindex="-1"
      >
        Second Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-key="three"
        data-rac=""
        id="react-aria-17-tab-three"
        role="tab"
        tabindex="-1"
      >
        Last Item
      </div>
    </div>
    <div
      aria-labelledby="react-aria-17-tab-one"
      class="react-aria-TabPanel"
      data-rac=""
      id="react-aria-17-tabpanel-one"
      role="tabpanel"
      tabindex="0"
    >
      First Content Panel
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs component normal styling renders 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ lljHPQ"
    data-orientation="horizontal"
    data-rac=""
  >
    <div
      aria-label="Items"
      aria-orientation="horizontal"
      class="react-aria-TabList"
      data-orientation="horizontal"
      data-rac=""
      id="react-aria-1"
      role="tablist"
    >
      <div
        aria-controls="react-aria-1-tabpanel-one"
        aria-selected="true"
        class="react-aria-Tab"
        data-key="one"
        data-rac=""
        data-selected="true"
        id="react-aria-1-tab-one"
        role="tab"
        tabindex="0"
      >
        First Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-key="two"
        data-rac=""
        id="react-aria-1-tab-two"
        role="tab"
        tabindex="-1"
      >
        Second Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-key="three"
        data-rac=""
        id="react-aria-1-tab-three"
        role="tab"
        tabindex="-1"
      >
        Last Item
      </div>
    </div>
    <div
      aria-labelledby="react-aria-1-tab-one"
      class="react-aria-TabPanel"
      data-rac=""
      id="react-aria-1-tabpanel-one"
      role="tabpanel"
      tabindex="0"
    >
      First Content Panel
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs component normal styling renders large size 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ AsoTD"
    data-orientation="horizontal"
    data-rac=""
  >
    <div
      aria-label="Items"
      aria-orientation="horizontal"
      class="react-aria-TabList"
      data-orientation="horizontal"
      data-rac=""
      id="react-aria-9"
      role="tablist"
    >
      <div
        aria-controls="react-aria-9-tabpanel-one"
        aria-selected="true"
        class="react-aria-Tab"
        data-key="one"
        data-rac=""
        data-selected="true"
        id="react-aria-9-tab-one"
        role="tab"
        tabindex="0"
      >
        First Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-key="two"
        data-rac=""
        id="react-aria-9-tab-two"
        role="tab"
        tabindex="-1"
      >
        Second Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-key="three"
        data-rac=""
        id="react-aria-9-tab-three"
        role="tab"
        tabindex="-1"
      >
        Last Item
      </div>
    </div>
    <div
      aria-labelledby="react-aria-9-tab-one"
      class="react-aria-TabPanel"
      data-rac=""
      id="react-aria-9-tabpanel-one"
      role="tabpanel"
      tabindex="0"
    >
      First Content Panel
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs component normal styling renders small size 1`] = `
<DocumentFragment>
  <div
    class="sc-bczRLJ mEdVR"
    data-orientation="horizontal"
    data-rac=""
  >
    <div
      aria-label="Items"
      aria-orientation="horizontal"
      class="react-aria-TabList"
      data-orientation="horizontal"
      data-rac=""
      id="react-aria-5"
      role="tablist"
    >
      <div
        aria-controls="react-aria-5-tabpanel-one"
        aria-selected="true"
        class="react-aria-Tab"
        data-key="one"
        data-rac=""
        data-selected="true"
        id="react-aria-5-tab-one"
        role="tab"
        tabindex="0"
      >
        First Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-key="two"
        data-rac=""
        id="react-aria-5-tab-two"
        role="tab"
        tabindex="-1"
      >
        Second Item
      </div>
      <div
        aria-selected="false"
        class="react-aria-Tab"
        data-key="three"
        data-rac=""
        id="react-aria-5-tab-three"
        role="tab"
        tabindex="-1"
      >
        Last Item
      </div>
    </div>
    <div
      aria-labelledby="react-aria-5-tab-one"
      class="react-aria-TabPanel"
      data-rac=""
      id="react-aria-5-tabpanel-one"
      role="tabpanel"
      tabindex="0"
    >
      First Content Panel
    </div>
  </div>
</DocumentFragment>
`;
